PL3/FunParser.java
// $ANTLR 3.5 Fun.g 2014-11-28 23:54:41

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class FunParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSN", "BOOL", "COLON", "COMMENT", 
		"DIGIT", "DIV", "DO", "DOT", "ELSE", "EOL", "EQ", "FALSE", "FOR", "FORMAL", 
		"FUNC", "FUNCCALL", "GT", "ID", "IF", "IFELSE", "INT", "LETTER", "LPAR", 
		"LT", "MINUS", "NOACTUAL", "NOFORMAL", "NOT", "NUM", "PLUS", "PROC", "PROCCALL", 
		"PROG", "REPEAT", "RETURN", "RPAR", "SEQ", "SPACE", "TIMES", "TO", "TRUE", 
		"UNTIL", "VAR", "WHILE"
	};
	public static final int EOF=-1;
	public static final int ASSN=4;
	public static final int BOOL=5;
	public static final int COLON=6;
	public static final int COMMENT=7;
	public static final int DIGIT=8;
	public static final int DIV=9;
	public static final int DO=10;
	public static final int DOT=11;
	public static final int ELSE=12;
	public static final int EOL=13;
	public static final int EQ=14;
	public static final int FALSE=15;
	public static final int FOR=16;
	public static final int FORMAL=17;
	public static final int FUNC=18;
	public static final int FUNCCALL=19;
	public static final int GT=20;
	public static final int ID=21;
	public static final int IF=22;
	public static final int IFELSE=23;
	public static final int INT=24;
	public static final int LETTER=25;
	public static final int LPAR=26;
	public static final int LT=27;
	public static final int MINUS=28;
	public static final int NOACTUAL=29;
	public static final int NOFORMAL=30;
	public static final int NOT=31;
	public static final int NUM=32;
	public static final int PLUS=33;
	public static final int PROC=34;
	public static final int PROCCALL=35;
	public static final int PROG=36;
	public static final int REPEAT=37;
	public static final int RETURN=38;
	public static final int RPAR=39;
	public static final int SEQ=40;
	public static final int SPACE=41;
	public static final int TIMES=42;
	public static final int TO=43;
	public static final int TRUE=44;
	public static final int UNTIL=45;
	public static final int VAR=46;
	public static final int WHILE=47;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public FunParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public FunParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return FunParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Fun.g"; }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// Fun.g:39:1: program : ( var_decl )* ( proc_decl )+ EOF -> ^( PROG ( var_decl )* ( proc_decl )+ ) ;
	public final FunParser.program_return program() throws RecognitionException {
		FunParser.program_return retval = new FunParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF3=null;
		ParserRuleReturnScope var_decl1 =null;
		ParserRuleReturnScope proc_decl2 =null;

		CommonTree EOF3_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_proc_decl=new RewriteRuleSubtreeStream(adaptor,"rule proc_decl");
		RewriteRuleSubtreeStream stream_var_decl=new RewriteRuleSubtreeStream(adaptor,"rule var_decl");

		try {
			// Fun.g:40:2: ( ( var_decl )* ( proc_decl )+ EOF -> ^( PROG ( var_decl )* ( proc_decl )+ ) )
			// Fun.g:40:4: ( var_decl )* ( proc_decl )+ EOF
			{
			// Fun.g:40:4: ( var_decl )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==BOOL||LA1_0==INT) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Fun.g:40:4: var_decl
					{
					pushFollow(FOLLOW_var_decl_in_program116);
					var_decl1=var_decl();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_var_decl.add(var_decl1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			// Fun.g:40:14: ( proc_decl )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==FUNC||LA2_0==PROC) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Fun.g:40:14: proc_decl
					{
					pushFollow(FOLLOW_proc_decl_in_program119);
					proc_decl2=proc_decl();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_proc_decl.add(proc_decl2.getTree());
					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program122); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF3);

			// AST REWRITE
			// elements: proc_decl, var_decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 40:31: -> ^( PROG ( var_decl )* ( proc_decl )+ )
			{
				// Fun.g:40:34: ^( PROG ( var_decl )* ( proc_decl )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);
				// Fun.g:41:35: ( var_decl )*
				while ( stream_var_decl.hasNext() ) {
					adaptor.addChild(root_1, stream_var_decl.nextTree());
				}
				stream_var_decl.reset();

				if ( !(stream_proc_decl.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_proc_decl.hasNext() ) {
					adaptor.addChild(root_1, stream_proc_decl.nextTree());
				}
				stream_proc_decl.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class proc_decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "proc_decl"
	// Fun.g:48:1: proc_decl : ( PROC ID LPAR formal RPAR COLON ( var_decl )* seq_com DOT -> ^( PROC ID formal ( var_decl )* seq_com ) | FUNC type ID LPAR formal RPAR COLON ( var_decl )* seq_com RETURN expr DOT -> ^( FUNC type ID formal ( var_decl )* seq_com expr ) );
	public final FunParser.proc_decl_return proc_decl() throws RecognitionException {
		FunParser.proc_decl_return retval = new FunParser.proc_decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token PROC4=null;
		Token ID5=null;
		Token LPAR6=null;
		Token RPAR8=null;
		Token COLON9=null;
		Token DOT12=null;
		Token FUNC13=null;
		Token ID15=null;
		Token LPAR16=null;
		Token RPAR18=null;
		Token COLON19=null;
		Token RETURN22=null;
		Token DOT24=null;
		ParserRuleReturnScope formal7 =null;
		ParserRuleReturnScope var_decl10 =null;
		ParserRuleReturnScope seq_com11 =null;
		ParserRuleReturnScope type14 =null;
		ParserRuleReturnScope formal17 =null;
		ParserRuleReturnScope var_decl20 =null;
		ParserRuleReturnScope seq_com21 =null;
		ParserRuleReturnScope expr23 =null;

		CommonTree PROC4_tree=null;
		CommonTree ID5_tree=null;
		CommonTree LPAR6_tree=null;
		CommonTree RPAR8_tree=null;
		CommonTree COLON9_tree=null;
		CommonTree DOT12_tree=null;
		CommonTree FUNC13_tree=null;
		CommonTree ID15_tree=null;
		CommonTree LPAR16_tree=null;
		CommonTree RPAR18_tree=null;
		CommonTree COLON19_tree=null;
		CommonTree RETURN22_tree=null;
		CommonTree DOT24_tree=null;
		RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
		RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
		RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
		RewriteRuleTokenStream stream_FUNC=new RewriteRuleTokenStream(adaptor,"token FUNC");
		RewriteRuleTokenStream stream_RETURN=new RewriteRuleTokenStream(adaptor,"token RETURN");
		RewriteRuleTokenStream stream_PROC=new RewriteRuleTokenStream(adaptor,"token PROC");
		RewriteRuleSubtreeStream stream_formal=new RewriteRuleSubtreeStream(adaptor,"rule formal");
		RewriteRuleSubtreeStream stream_seq_com=new RewriteRuleSubtreeStream(adaptor,"rule seq_com");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		RewriteRuleSubtreeStream stream_var_decl=new RewriteRuleSubtreeStream(adaptor,"rule var_decl");

		try {
			// Fun.g:49:2: ( PROC ID LPAR formal RPAR COLON ( var_decl )* seq_com DOT -> ^( PROC ID formal ( var_decl )* seq_com ) | FUNC type ID LPAR formal RPAR COLON ( var_decl )* seq_com RETURN expr DOT -> ^( FUNC type ID formal ( var_decl )* seq_com expr ) )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==PROC) ) {
				alt5=1;
			}
			else if ( (LA5_0==FUNC) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// Fun.g:49:4: PROC ID LPAR formal RPAR COLON ( var_decl )* seq_com DOT
					{
					PROC4=(Token)match(input,PROC,FOLLOW_PROC_in_proc_decl219); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_PROC.add(PROC4);

					ID5=(Token)match(input,ID,FOLLOW_ID_in_proc_decl221); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_ID.add(ID5);

					LPAR6=(Token)match(input,LPAR,FOLLOW_LPAR_in_proc_decl227); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_LPAR.add(LPAR6);

					pushFollow(FOLLOW_formal_in_proc_decl229);
					formal7=formal();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_formal.add(formal7.getTree());
					RPAR8=(Token)match(input,RPAR,FOLLOW_RPAR_in_proc_decl231); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_RPAR.add(RPAR8);

					COLON9=(Token)match(input,COLON,FOLLOW_COLON_in_proc_decl233); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_COLON.add(COLON9);

					// Fun.g:51:5: ( var_decl )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==BOOL||LA3_0==INT) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// Fun.g:51:5: var_decl
							{
							pushFollow(FOLLOW_var_decl_in_proc_decl239);
							var_decl10=var_decl();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_var_decl.add(var_decl10.getTree());
							}
							break;

						default :
							break loop3;
						}
					}

					pushFollow(FOLLOW_seq_com_in_proc_decl242);
					seq_com11=seq_com();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_seq_com.add(seq_com11.getTree());
					DOT12=(Token)match(input,DOT,FOLLOW_DOT_in_proc_decl244); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_DOT.add(DOT12);

					// AST REWRITE
					// elements: seq_com, var_decl, formal, ID, PROC
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 51:30: -> ^( PROC ID formal ( var_decl )* seq_com )
					{
						// Fun.g:51:33: ^( PROC ID formal ( var_decl )* seq_com )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(stream_PROC.nextNode(), root_1);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_formal.nextTree());
						// Fun.g:53:35: ( var_decl )*
						while ( stream_var_decl.hasNext() ) {
							adaptor.addChild(root_1, stream_var_decl.nextTree());
						}
						stream_var_decl.reset();

						adaptor.addChild(root_1, stream_seq_com.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Fun.g:54:4: FUNC type ID LPAR formal RPAR COLON ( var_decl )* seq_com RETURN expr DOT
					{
					FUNC13=(Token)match(input,FUNC,FOLLOW_FUNC_in_proc_decl336); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_FUNC.add(FUNC13);

					pushFollow(FOLLOW_type_in_proc_decl338);
					type14=type();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_type.add(type14.getTree());
					ID15=(Token)match(input,ID,FOLLOW_ID_in_proc_decl340); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_ID.add(ID15);

					LPAR16=(Token)match(input,LPAR,FOLLOW_LPAR_in_proc_decl346); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_LPAR.add(LPAR16);

					pushFollow(FOLLOW_formal_in_proc_decl348);
					formal17=formal();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_formal.add(formal17.getTree());
					RPAR18=(Token)match(input,RPAR,FOLLOW_RPAR_in_proc_decl350); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_RPAR.add(RPAR18);

					COLON19=(Token)match(input,COLON,FOLLOW_COLON_in_proc_decl352); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_COLON.add(COLON19);

					// Fun.g:56:5: ( var_decl )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==BOOL||LA4_0==INT) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// Fun.g:56:5: var_decl
							{
							pushFollow(FOLLOW_var_decl_in_proc_decl358);
							var_decl20=var_decl();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_var_decl.add(var_decl20.getTree());
							}
							break;

						default :
							break loop4;
						}
					}

					pushFollow(FOLLOW_seq_com_in_proc_decl361);
					seq_com21=seq_com();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_seq_com.add(seq_com21.getTree());
					RETURN22=(Token)match(input,RETURN,FOLLOW_RETURN_in_proc_decl367); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_RETURN.add(RETURN22);

					pushFollow(FOLLOW_expr_in_proc_decl369);
					expr23=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr23.getTree());
					DOT24=(Token)match(input,DOT,FOLLOW_DOT_in_proc_decl371); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_DOT.add(DOT24);

					// AST REWRITE
					// elements: type, expr, var_decl, seq_com, FUNC, ID, formal
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 57:30: -> ^( FUNC type ID formal ( var_decl )* seq_com expr )
					{
						// Fun.g:57:33: ^( FUNC type ID formal ( var_decl )* seq_com expr )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(stream_FUNC.nextNode(), root_1);
						adaptor.addChild(root_1, stream_type.nextTree());
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_formal.nextTree());
						// Fun.g:59:35: ( var_decl )*
						while ( stream_var_decl.hasNext() ) {
							adaptor.addChild(root_1, stream_var_decl.nextTree());
						}
						stream_var_decl.reset();

						adaptor.addChild(root_1, stream_seq_com.nextTree());
						adaptor.addChild(root_1, stream_expr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "proc_decl"


	public static class formal_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "formal"
	// Fun.g:63:1: formal : ( type ID -> ^( FORMAL type ID ) | -> NOFORMAL );
	public final FunParser.formal_return formal() throws RecognitionException {
		FunParser.formal_return retval = new FunParser.formal_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID26=null;
		ParserRuleReturnScope type25 =null;

		CommonTree ID26_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// Fun.g:64:2: ( type ID -> ^( FORMAL type ID ) | -> NOFORMAL )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==BOOL||LA6_0==INT) ) {
				alt6=1;
			}
			else if ( (LA6_0==RPAR) ) {
				alt6=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// Fun.g:64:4: type ID
					{
					pushFollow(FOLLOW_type_in_formal513);
					type25=type();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_type.add(type25.getTree());
					ID26=(Token)match(input,ID,FOLLOW_ID_in_formal515); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_ID.add(ID26);

					// AST REWRITE
					// elements: ID, type
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 64:31: -> ^( FORMAL type ID )
					{
						// Fun.g:64:34: ^( FORMAL type ID )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FORMAL, "FORMAL"), root_1);
						adaptor.addChild(root_1, stream_type.nextTree());
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Fun.g:65:31: 
					{
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 65:31: -> NOFORMAL
					{
						adaptor.addChild(root_0, (CommonTree)adaptor.create(NOFORMAL, "NOFORMAL"));
					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "formal"


	public static class var_decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "var_decl"
	// Fun.g:68:1: var_decl : type ID ASSN expr -> ^( VAR type ID expr ) ;
	public final FunParser.var_decl_return var_decl() throws RecognitionException {
		FunParser.var_decl_return retval = new FunParser.var_decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID28=null;
		Token ASSN29=null;
		ParserRuleReturnScope type27 =null;
		ParserRuleReturnScope expr30 =null;

		CommonTree ID28_tree=null;
		CommonTree ASSN29_tree=null;
		RewriteRuleTokenStream stream_ASSN=new RewriteRuleTokenStream(adaptor,"token ASSN");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// Fun.g:69:2: ( type ID ASSN expr -> ^( VAR type ID expr ) )
			// Fun.g:69:4: type ID ASSN expr
			{
			pushFollow(FOLLOW_type_in_var_decl589);
			type27=type();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type.add(type27.getTree());
			ID28=(Token)match(input,ID,FOLLOW_ID_in_var_decl591); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID28);

			ASSN29=(Token)match(input,ASSN,FOLLOW_ASSN_in_var_decl593); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ASSN.add(ASSN29);

			pushFollow(FOLLOW_expr_in_var_decl595);
			expr30=expr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_expr.add(expr30.getTree());
			// AST REWRITE
			// elements: expr, ID, type
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 69:31: -> ^( VAR type ID expr )
			{
				// Fun.g:69:34: ^( VAR type ID expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR, "VAR"), root_1);
				adaptor.addChild(root_1, stream_type.nextTree());
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_expr.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "var_decl"


	public static class type_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "type"
	// Fun.g:72:1: type : ( BOOL -> BOOL | INT -> INT );
	public final FunParser.type_return type() throws RecognitionException {
		FunParser.type_return retval = new FunParser.type_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token BOOL31=null;
		Token INT32=null;

		CommonTree BOOL31_tree=null;
		CommonTree INT32_tree=null;
		RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
		RewriteRuleTokenStream stream_BOOL=new RewriteRuleTokenStream(adaptor,"token BOOL");

		try {
			// Fun.g:73:2: ( BOOL -> BOOL | INT -> INT )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==BOOL) ) {
				alt7=1;
			}
			else if ( (LA7_0==INT) ) {
				alt7=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
